--- a/src/_styles/main.scss
+++ b/src/_styles/main.scss
@@ -3,41 +3,118 @@
 
 // Import Modules
 @import '../_modules/link/link';
+@import '../_modules/listItem/listItem';
 
 // Box sizing partial styles:
 // Apply a natural box layout model to all elements
-*,
-*:before,
-*:after {
-  -moz-box-sizing: border-box;
-  -webkit-box-sizing: border-box;
+* {
   box-sizing: border-box;
 }
 
-.yeogurt-info {
-  text-align: center;
-  max-width: 500px;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.version {
-  font-size: 14px;
-  font-family: Menlo, Monaco, Consolas, "Courier New", monospace;
-  position: absolute;
-  bottom: 10px;
-  right: 10px;
-}
-
-.logo {
-  margin-top: 15px;
-}
-
-// Styling on warning for users on IE7 or below
-.browsehappy {
-  text-align: center;
+body, html {
   margin: 0;
-  background: #fff8e2;
-  color: #000;
-  padding: 0.5em 0;
+  background: rgb(242, 241, 241);
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.header {
+  height: 56px;
+  padding: 0 16px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  background-color: white;
+}
+
+.header__logo {
+  height: 56px;
+  display: flex;
+  flex-direction: row;
+}
+
+.header__logoImg {
+  padding: 18px 14px 18px 16px;
+}
+
+.header__search {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+
+}
+
+.header__search--bar {
+  display: flex;
+  position: relative;
+  flex-direction: row;
+}
+
+.header__search--bar--searchinput {
+  width: 240px;
+}
+
+.header__search--barInput{
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  width: 300px;
+}
+
+
+.header__search--bar--searchinput {
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.header__empty {
+  height: 56px;
+}
+
+.header__search--button {
+  border: 1px solid rgb(159, 158, 158);
+  background-color: rgb(227, 226, 226);
+  border-radius: 0 2px 2px 0;
+  cursor: pointer;
+  height: 30px;
+  width: 64px;
+  margin: 0;
+}
+
+
+/* MAIN */
+
+.layout__columns {
+  display: flex;
+  justify-content: center;
+}
+
+.secondary {
+  width: 426px;
+  padding-top: 30px;
+  padding-right: 30px;
+}
+.primary {
+
+  width: 70vw;
+  padding: 30px;
+}
+
+
+
+.aspect-ratio-box {
+  height: 0;
+  overflow: hidden;
+  padding-top: calc((360 / 640) * 100%);
+  position: relative;
+  
+}
+
+.video {
+position: absolute;
+top: 0;
+left: 0;
+width: 100%;
+height: 100%;
 }
